--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,6 +106,14 @@ jobs:
         run: JAVA_HOME=jdk-graalvm ant demo -Dclass=org.lwjgl.demo.util.lz4.HelloLZ4
       - name: Run demo with GraalVM Native Image
         run: ./org.lwjgl.demo.util.lz4.hellolz4
+      - name: Package distribution
+        run: ant -emacs dist
+      - name: Upload Linux ${{ matrix.ARCH }} artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: lwjgl-bundle-linux-${{ matrix.ARCH }}
+          path: dist/
+          retention-days: 7
 
   linux-cross:
     name: Linux Cross
@@ -173,6 +181,14 @@ jobs:
         run: ant -emacs compile
       - name: Build native
         run: ant -emacs compile-native -Dgcc.libpath.opengl=/usr/lib/${{matrix.TRIPLET}}/mesa
+      - name: Package distribution
+        run: ant -emacs dist
+      - name: Upload Linux ${{ matrix.ARCH }} artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: lwjgl-bundle-linux-${{ matrix.ARCH }}
+          path: dist/
+          retention-days: 7
 
   freebsd-cross:
     name: FreeBSD Cross
@@ -282,6 +298,14 @@ jobs:
         run: JAVA_HOME=jdk-graalvm/Contents/Home ant demo -Dclass=org.lwjgl.demo.util.lz4.HelloLZ4
       - name: Run demo with GraalVM Native Image
         run: ./org.lwjgl.demo.util.lz4.hellolz4
+      - name: Package distribution
+        run: ant -emacs dist
+      - name: Upload macOS ${{ matrix.ARCH }} artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: lwjgl-bundle-macos-${{ matrix.ARCH }}
+          path: dist/
+          retention-days: 7
 
   windows:
     name: Windows
@@ -381,3 +405,11 @@ jobs:
       - name: Run demo with GraalVM Native Image
         run: org.lwjgl.demo.util.lz4.hellolz4.exe
         if: matrix.ARCH == 'x64'
+      - name: Package distribution
+        run: ant -emacs dist
+      - name: Upload Windows ${{ matrix.ARCH }} artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: lwjgl-bundle-windows-${{ matrix.ARCH }}
+          path: dist/
+          retention-days: 7
